--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "url": "git@github.com:flyvictor/fortune.git"
   },
   "dependencies": {
-    "body-parser": "^1.14.1",
     "datejs": "1.0.0-rc3",
-    "express": "4.13.3",
+    "express": "~3.5.1",
     "i": "~0.3.2",
     "lodash": "3.10.1",
     "mkdirp": "0.5.1",
