--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "superagent": "^2.1.0",
     "supertest": "^2.0.0",
     "validate.js": "0.9.0",
-    "when": "^3.7.3"
+    "when": "^3.7.3",
+    "zipkin": "0.11.1"
   },
   "devDependencies": {
     "fortune-mongodb": "git://github.com/flyvictor/fortune-mongodb.git#v1.1.5",
