--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fortune",
   "description": "Web framework for prototyping hypermedia APIs.",
-  "version": "1.21.3",
+  "version": "1.28.8",
   "license": "MIT",
   "author": {
     "name": "flyvictor",
@@ -54,7 +54,7 @@
     "prettify": "prettier *.js --write"
   },
   "engines": {
-    "node": "18.12.0"
+    "node": ">=18.12.0"
   },
   "keywords": [
     "json",
