--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,8 @@
 {
+  "root": true,
+  "parserOptions": {
+    "ecmaVersion": 2020
+  },
   "extends": [
     "prettier",
     "plugin:node/recommended",
